# nerd

./: .gitignore  .mailmap  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  refactoring_plan.md  test_dev.py
.github/workflows/: deploy_docs.yml
cli/create/: index.html
cli/mut_count/: index.html
cli/nmr_add_kinetics/: index.html
cli/nmr_create/: index.html
cli/nmr_deg_kinetics/: index.html
cli/probe_timecourse/: index.html
cli/tempgrad_fit/: index.html
demo_folder/: nerd.sqlite-shm  nerd.sqlite-wal
demo_folder/02_nmr_kinetics/: fit_add.yaml  fit_deg.yaml
demo_folder/03_nmr_arrhenius/: tempgrad_atp_c8.yaml  tempgrad_deg.yaml
demo_folder/04_run_mutcounts/: mutcount_1.yaml  mutcount_1_slurm.yaml
demo_folder/05_probe_tc_kinetics/: config.yaml
demo_folder/06_probe_tempgrad_fit/: config.yaml
docs/: index.md
docs/cli/: create.md  mut_count.md  nmr_add_kinetics.md  nmr_create.md  nmr_deg_kinetics.md  probe_timecourse.md  tempgrad_fit.md
docs/guides/: create-probing.md  create-samples.md  nmr-kinetics.md  probe-mutcount.md  probe-timecourse.md  sample-organization.md  tempgrad-fit.md
examples/: nerd.sqlite-shm  nerd.sqlite-wal  nerd_dev.sqlite3
examples/create_all_samples/: buffers.csv  constructs.csv  (+7 more)
nerd/: cli.py  folder_structure.txt  main.py  repo_layout  user_cli_folder_layout.txt
nerd.egg-info/: PKG-INFO  SOURCES.txt
nerd_v0.1.0/: cli.py  folder_structure.txt  main.py
scripts/: check_rstan_sanity.R
search/: search_index.json
test_data/: nmr_adduction_samples.csv  nmr_buffers.csv  nmr_degradation_samples.csv
test_output/: melted_probing_data.csv  nerd_dev.sqlite3
tests/: conftest.py  test_cli.py  test_derived_materializer.py  test_dummy_python_ssh.py  test_tasks_create.py  test_tasks_nmr.py  test_tasks_nmr_create.py  test_tasks_prepare.py  test_tempgrad_engine.py  test_utils.py
(+320 files in other folders)
