[project]
name = "nerd"
version = "0.1.1"
description = "Analysis tools for RNA energetics and dynamics"
authors = [
    { name = "Edric Choi", email = "edr.choi@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "typer>=0.9",         # CLI framework
    "rich>=13.0",         # Logging, CLI formatting
    "numpy>=1.23",        # Numeric operations
    "pandas>=1.5",        # Data handling
    "scipy>=1.9",         # Optimization backend for lmfit
    "lmfit>=1.2",         # Fitting models
    "pyyaml>=6.0",        # YAML config parsing
]

[project.scripts]
nerd = "nerd.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nerd*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
